# baro-protect

./: .gitignore  README.md  docker-compose.dev.yml
docs/: _config.yml  documentation.md  index.md
mobile/: package-lock.json  package.json
server/: .gitignore  pyproject.toml
server/src/server/api/: main.py  settings.py
server/src/server/common/: __init__.py  base_settings.py
