[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Kim Minseok",email = "minseok@chungbuk.ac.kr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "fastapi[standard] (>=0.128.0,<0.129.0)"
]

[tool.poetry]
packages = [{include = "server", from = "src"}]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
